# ChangeLog for dev-java/openjdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Add libraries OpenJDK links against and don't RDEPEND on ant-core, sun-jdk,
  virtual/jdk or motif.

  09 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Fixed HOMEPAGE and access violation while creating /root/.openjdk

  08 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha12.ebuild:
  Fix SRC_URI to include BASE_URL.

  08 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +openjdk-1.7.0.0_alpha12.ebuild, +files/openjdk-1.7.env:
  Add initial ebuild for openjdk. The build takes long.
